backend testing almost done

--- a/HW1/MoliceiroUniRestaurants/pom.xml
+++ b/HW1/MoliceiroUniRestaurants/pom.xml
@@ -85,6 +85,18 @@
 			<artifactId>converter-gson</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>3.12.4</version> <!-- or newer -->
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
