--- a/HW1/MoliceiroUniRestaurants/pom.xml
+++ b/HW1/MoliceiroUniRestaurants/pom.xml
@@ -109,6 +109,21 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.2</version>
+				<!-- The following setup is only required when using Allure -->
+				<configuration>
+					<properties>
+						<property>
+							<name>listener</name>
+							<value>io.qameta.allure.junit5.AllureJunit5</value>
+						</property>
+					</properties>
+				</configuration>
+				<!-- /Allure -->
+			</plugin>
 		</plugins>
 	</build>
 
