--- a/lab8/lab8_2cars/pom.xml
+++ b/lab8/lab8_2cars/pom.xml
@@ -65,6 +65,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>5.1.0.4751</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
